--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="button_textColor">#1A1B22</color>
     <color name="image_color">#AEAFB4</color>
     <color name="main_background_color">#3772E7</color>
+    <color name="main_background_color_night">#1A1B22</color>
 </resources>
