--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,11 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
 
-
+    <style name="MainLayoutColor">
+        <item name="android:background">@color/main_background_color</item>
     </style>
 
-    <style name="MainLayoutColor" parent="Base.Theme.PlaylistMaker">
-        <item name="android:background">@color/main_background_color_night</item>
-    </style>
-
-    <style name="MainButtonStyle" parent="Base.Theme.PlaylistMaker">
+    <style name="MainButtonStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_marginStart">@dimen/base_margin</item>
@@ -30,7 +24,7 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
-    <style name="SettingsTextViewItemStyle" parent="Base.Theme.PlaylistMaker">
+    <style name="SettingsTextViewItemStyle">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/margin_settings_menu_start</item>
@@ -38,28 +32,26 @@
         <item name="android:layout_marginEnd">@dimen/margin_settings_menu_end</item>
         <item name="android:layout_marginBottom">@dimen/margin_settings_menu_bottom</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/settings_text_size</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
-    <style name="SettingsImageViewItemStyles" parent="Base.Theme.PlaylistMaker">
+    <style name="SettingsImageViewItemStyles">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/margin_settings_menu_top</item>
         <item name="android:layout_marginEnd">@dimen/margin_settings_menu_start</item>
         <item name="android:layout_marginBottom">@dimen/margin_settings_menu_bottom</item>
-        <item name="tint">@color/white</item>
+        <item name="tint">@color/image_color</item>
     </style>
 
-    <style name="SettingsImageViewBackArrowStyles" parent="Base.Theme.PlaylistMaker">
+    <style name="SettingsImageViewBackArrowStyles">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/margin_settings_menu_top</item>
         <item name="android:layout_marginEnd">@dimen/margin_settings_menu_start</item>
         <item name="android:layout_marginBottom">@dimen/margin_settings_menu_bottom</item>
-        <item name="tint">@color/white</item>
+        <item name="tint">@color/button_textColor</item>
     </style>
-
-
 </resources>
