--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,9 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".SearchActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/image_view_back_arrow"
+            style="@style/SettingsImageViewBackArrowStyles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_settings_menu_start"
+            android:layout_marginTop="@dimen/margin_settings_menu_start"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="@dimen/margin_settings_menu_start"
+            android:src="@drawable/baseline_arrow_back_24" />
+
+        <TextView
+            android:id="@+id/text_view_search"
+            style="@style/SettingsTextViewItemStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="@dimen/margin_settings_menu_end"
+            android:layout_marginBottom="@dimen/margin_settings_menu_end"
+            android:layout_weight="1"
+            android:fontFamily="@font/ys_display_medium"
+            android:text="@string/search"
+            android:textSize="@dimen/primary_text_size" />
+
+
+    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_settings_menu_start"
+        android:layout_marginTop="@dimen/margin_search_layout_top_bottom"
+        android:layout_marginEnd="@dimen/margin_settings_menu_start"
+        android:layout_marginBottom="@dimen/margin_search_layout_top_bottom"
+        app:cardCornerRadius="8dp">
+
+        <LinearLayout
+            style="@style/SearchLayoutStyles"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/image_view_search"
+                style="@style/SearchImageViewStyle"
+                android:src="@drawable/baseline_search_24" />
+
+            <EditText
+                android:id="@+id/edit_text_search"
+                style="@style/SearchEditTextStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="@dimen/margin_search_image"
+                android:layout_marginTop="@dimen/margin_search_layout_top_bottom"
+                android:layout_marginEnd="@dimen/margin_search_image"
+                android:layout_marginBottom="@dimen/margin_search_layout_top_bottom"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:hint="@string/search"
+                android:inputType="text"
+                android:lines="1"
+                android:maxLength="15" />
+
+            <ImageView
+                android:id="@+id/image_view_clear"
+                style="@style/SearchImageViewStyle"
+                android:src="@drawable/baseline_clear_24"
+                android:visibility="gone" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
