--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -61,5 +61,23 @@
         <item name="tint">@color/white</item>
     </style>
 
+    <style name="SearchLayoutStyles" parent="Base.Theme.PlaylistMaker">
+        <item name="android:background">@color/white</item>
 
+    </style>
+
+    <style name="SearchImageViewStyle">
+        <item name="tint">@color/button_textColor</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginStart">@dimen/margin_settings_menu_start</item>
+        <item name="android:layout_marginTop">@dimen/margin_search_layout_top_bottom</item>
+        <item name="android:layout_marginEnd">@dimen/margin_search_image</item>
+        <item name="android:layout_marginBottom">@dimen/margin_search_layout_top_bottom</item>
+    </style>
+
+    <style name="SearchEditTextStyle">
+        <item name="android:textColorHint">@color/button_textColor</item>
+    </style>
 </resources>
