--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="image_color">#AEAFB4</color>
     <color name="main_background_color">#3772E7</color>
     <color name="main_background_color_night">#1A1B22</color>
+    <color name="search_layout_color">#E6E8EB</color>
 </resources>
