--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,7 @@
     <dimen name="margin_settings_menu_bottom">22dp</dimen>
     <dimen name="margin_settings_menu_start">16dp</dimen>
     <dimen name="margin_settings_menu_end">12dp</dimen>
+
+    <dimen name="margin_search_image">4dp</dimen>
+    <dimen name="margin_search_layout_top_bottom">8dp</dimen>
 </resources>
