--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:background">@color/main_background_color</item>
     </style>
 
-    <style name="MainButtonStyle">
+    <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_marginStart">@dimen/base_margin</item>
@@ -53,5 +53,23 @@
         <item name="android:layout_marginEnd">@dimen/margin_settings_menu_start</item>
         <item name="android:layout_marginBottom">@dimen/margin_settings_menu_bottom</item>
         <item name="tint">@color/button_textColor</item>
+    </style>
+
+    <style name="SearchLayoutStyles" >
+        <item name="android:background">@color/search_layout_color</item>
+
+    </style>
+    <style name="SearchImageViewStyle">
+        <item name="tint">@color/image_color</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginStart">@dimen/margin_settings_menu_start</item>
+        <item name="android:layout_marginTop">@dimen/margin_search_layout_top_bottom</item>
+        <item name="android:layout_marginEnd">@dimen/margin_search_image</item>
+        <item name="android:layout_marginBottom">@dimen/margin_search_layout_top_bottom</item>
+    </style>
+    <style name="SearchEditTextStyle">
+
     </style>
 </resources>
