-add text in strings -fix text color in EditText

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,24 +24,38 @@
     <Button
         android:id="@+id/button_search"
         style="@style/MainButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/base_margin"
+        android:layout_marginEnd="@dimen/base_margin"
+        android:layout_marginBottom="@dimen/base_margin"
+        android:layout_weight="1"
         android:text="@string/search"
         app:icon="@drawable/baseline_search_24" />
 
     <Button
         android:id="@+id/button_mediateka"
         style="@style/MainButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/base_margin"
+        android:layout_marginEnd="@dimen/base_margin"
+        android:layout_marginBottom="@dimen/base_margin"
+        android:layout_weight="1"
         android:text="@string/mediateka"
         app:icon="@drawable/baseline_library_music_24" />
 
     <Button
         android:id="@+id/button_settings"
         style="@style/MainButtonStyle"
-        android:onClick="showToastForButtonSettings"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/base_margin"
+        android:layout_marginEnd="@dimen/base_margin"
+        android:layout_marginBottom="@dimen/base_margin"
+        android:layout_weight="1"
         android:text="@string/settings"
         app:icon="@drawable/baseline_settings_24" />
-    <!--
-    :-) bad practice onClick in xml
--->
 
 
 </LinearLayout>
