--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/margin_search_image"
         android:orientation="horizontal">
 
         <ImageView
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_settings_menu_start"
             android:layout_marginTop="@dimen/margin_settings_menu_start"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="@dimen/margin_settings_menu_bottom"
             android:layout_marginBottom="@dimen/margin_settings_menu_start"
             android:src="@drawable/baseline_arrow_back_24" />
 
@@ -30,7 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="@dimen/margin_settings_menu_end"
             android:layout_marginEnd="@dimen/margin_settings_menu_end"
             android:layout_marginBottom="@dimen/margin_settings_menu_end"
             android:layout_weight="1"
@@ -42,13 +42,22 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/layout_dark_theme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_search_image"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/text_view_dark_theme"
             style="@style/SettingsTextViewItemStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_settings_menu_start"
+            android:layout_marginTop="@dimen/margin_settings_menu_end"
+            android:layout_marginEnd="@dimen/margin_settings_menu_end"
+            android:layout_marginBottom="@dimen/margin_settings_menu_end"
+            android:layout_weight="1"
             android:text="@string/dark_theme" />
 
         <androidx.appcompat.widget.SwitchCompat
@@ -63,50 +72,95 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/layout_shared_app"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_search_image"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/text_view_shared"
             style="@style/SettingsTextViewItemStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/margin_settings_menu_start"
+            android:layout_marginTop="@dimen/margin_settings_menu_end"
+            android:layout_marginEnd="@dimen/margin_settings_menu_end"
+            android:layout_marginBottom="@dimen/margin_settings_menu_end"
+            android:layout_weight="1"
             android:text="@string/shared_app" />
 
         <ImageView
             android:id="@+id/image_view_share"
             style="@style/SettingsImageViewItemStyles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_settings_menu_top"
+            android:layout_marginEnd="@dimen/margin_settings_menu_start"
+            android:layout_marginBottom="@dimen/margin_settings_menu_bottom"
             android:src="@drawable/baseline_share_24" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/layout_write_support"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_search_image"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/text_view_write_support"
             style="@style/SettingsTextViewItemStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/margin_settings_menu_start"
+            android:layout_marginTop="@dimen/margin_settings_menu_end"
+            android:layout_marginEnd="@dimen/margin_settings_menu_end"
+            android:layout_marginBottom="@dimen/margin_settings_menu_end"
+            android:layout_weight="1"
             android:text="@string/write_support" />
 
         <ImageView
             android:id="@+id/image_view_write_support"
             style="@style/SettingsImageViewItemStyles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_settings_menu_top"
+            android:layout_marginEnd="@dimen/margin_settings_menu_start"
+            android:layout_marginBottom="@dimen/margin_settings_menu_bottom"
             android:src="@drawable/baseline_support_agent_24" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/layout_user_agreement"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_search_image"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/text_view_user_agreement"
             style="@style/SettingsTextViewItemStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/margin_settings_menu_start"
+            android:layout_marginTop="@dimen/margin_settings_menu_end"
+            android:layout_marginEnd="@dimen/margin_settings_menu_end"
+            android:layout_marginBottom="@dimen/margin_settings_menu_end"
+            android:layout_weight="1"
             android:text="@string/user_agreement" />
 
         <ImageView
             android:id="@+id/image_view_user_agreement"
             style="@style/SettingsImageViewItemStyles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_settings_menu_top"
+            android:layout_marginEnd="@dimen/margin_settings_menu_start"
+            android:layout_marginBottom="@dimen/margin_settings_menu_bottom"
             android:src="@drawable/baseline_arrow_forward_ios_24" />
     </LinearLayout>
 </LinearLayout>
