--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -51,4 +51,23 @@
         <item name="android:textColorHint">@color/button_textColor</item>
         <item name="android:textColor">@color/button_textColor</item>
     </style>
+
+    <style name="SearchItemTrackImageViewStyle">
+        <item name="tint">@color/white</item>
+
+    </style>
+
+    <style name="SearchItemTrackNameTextStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/settings_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+    <style name="SearchItemTrackInfoTextStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/search_track_item_info_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+    <style name="SearchItemTrackImageDotPointImageStyle">
+        <item name="tint">@color/white</item>
+    </style>
 </resources>
