--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,23 @@
         <item name="tint">@color/image_color</item>
     </style>
 
-    <style name="SearchEditTextStyle">
+    <style name="SearchItemTrackImageViewStyle">
+        <item name="tint">@color/image_color</item>
+
     </style>
+
+    <style name="SearchItemTrackNameTextStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/settings_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+    <style name="SearchItemTrackInfoTextStyle">
+        <item name="android:textColor">@color/image_color</item>
+        <item name="android:textSize">@dimen/search_track_item_info_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+    <style name="SearchItemTrackImageDotPointImageStyle">
+        <item name="tint">@color/image_color</item>
+    </style>
+
 </resources>
