--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -25,21 +25,21 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
-    <style name="SettingsTextViewItemStyle" >
+    <style name="SettingsTextViewItemStyle">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/settings_text_size</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
     </style>
 
-    <style name="SettingsImageViewItemStyles" >
+    <style name="SettingsImageViewItemStyles">
         <item name="tint">@color/white</item>
     </style>
 
-    <style name="SettingsImageViewBackArrowStyles" >
+    <style name="SettingsImageViewBackArrowStyles">
         <item name="tint">@color/white</item>
     </style>
 
-    <style name="SearchLayoutStyles" >
+    <style name="SearchLayoutStyles">
         <item name="android:background">@color/white</item>
     </style>
 
@@ -62,12 +62,29 @@
         <item name="android:textSize">@dimen/settings_text_size</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
+
     <style name="SearchItemTrackInfoTextStyle">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/search_track_item_info_text_size</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
+
     <style name="SearchItemTrackImageDotPointImageStyle">
         <item name="tint">@color/white</item>
+    </style>
+
+
+    <style name="SearchItemTrackButtonRefreshStyle">
+        <item name="android:textColor">@color/button_textColor</item>
+        <item name="backgroundTint">@color/white</item>
+    </style>
+
+    <style name="SearchItemTrackErrorInternetConnectionImageStyle">
+        <item name="android:src">@drawable/dark_mode</item>
+
+    </style>
+
+    <style name="SearchItemTrackEmptyResultImageStyle">
+        <item name="android:src">@drawable/dark_mode_empty</item>
     </style>
 </resources>
