--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -77,6 +77,8 @@
     <style name="SearchItemTrackButtonRefreshStyle">
         <item name="android:textColor">@color/button_textColor</item>
         <item name="backgroundTint">@color/white</item>
+        <item name="android:textSize">@dimen/search_track_button_refresh_text_size</item>
+        <item name="fontFamily">@font/ys_display_medium</item>
     </style>
 
     <style name="SearchItemTrackErrorInternetConnectionImageStyle">
@@ -86,5 +88,12 @@
 
     <style name="SearchItemTrackEmptyResultImageStyle">
         <item name="android:src">@drawable/dark_mode_empty</item>
+    </style>
+
+    <style name="SearchItemTrackTextViewStyle">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">@dimen/search_track_text_size</item>
+        <item name="android:textColor">@color/white</item>
+
     </style>
 </resources>
