--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <dimen name="primary_text_size">22sp</dimen>
     <dimen name="settings_text_size">16sp</dimen>
     <dimen name="search_track_item_info_text_size">11sp</dimen>
+    <dimen name="search_track_button_refresh_text_size">14sp</dimen>
+    <dimen name="search_track_text_size">19sp</dimen>
 
     <dimen name="top_title_margin">12dp</dimen>
     <dimen name="bottom_title_margin">40dp</dimen>
