--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,7 @@
         <item name="tint">@color/button_textColor</item>
     </style>
 
-    <style name="SearchLayoutStyles" >
+    <style name="SearchLayoutStyles">
         <item name="android:background">@color/search_layout_color</item>
     </style>
 
@@ -51,11 +51,13 @@
         <item name="android:textSize">@dimen/settings_text_size</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
+
     <style name="SearchItemTrackInfoTextStyle">
         <item name="android:textColor">@color/image_color</item>
         <item name="android:textSize">@dimen/search_track_item_info_text_size</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
+
     <style name="SearchItemTrackImageDotPointImageStyle">
         <item name="tint">@color/image_color</item>
     </style>
@@ -63,13 +65,24 @@
     <style name="SearchItemTrackButtonRefreshStyle">
         <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">@color/button_textColor</item>
+        <item name="android:textSize">@dimen/search_track_button_refresh_text_size</item>
+        <item name="fontFamily">@font/ys_display_medium</item>
     </style>
+
     <style name="SearchItemTrackErrorInternetConnectionImageStyle">
         <item name="android:src">@drawable/light_mode</item>
 
     </style>
+
     <style name="SearchItemTrackEmptyResultImageStyle">
         <item name="android:src">@drawable/light_mode_empty</item>
+    </style>
+
+    <style name="SearchItemTrackTextViewStyle">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">@dimen/search_track_text_size</item>
+        <item name="android:textColor">@color/button_textColor</item>
+
     </style>
 
 </resources>
