--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -96,4 +96,32 @@
         <item name="android:textColor">@color/white</item>
 
     </style>
+
+
+    <style name="PlayerTextViewTrackNameStyle">
+        <item name="android:textColor">@color/title_textColor</item>
+    </style>
+
+    <style name="PlayerGrayButtonStyle">
+        <item name="backgroundTint">@color/title_textColor</item>
+        <item name="android:alpha">0.25</item>
+    </style>
+
+    <style name="PlayerButtonPlayTrackStyle">
+        <item name="tint">@color/button_textColor</item>
+        <item name="backgroundTint">@color/white</item>
+    </style>
+    <style name="PlayerTextViewLabelsStyle">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/image_color</item>
+        <item name="android:textSize">@dimen/player_text_view_info_text_size</item>
+
+    </style>
+    <style name="PlayerTextViewInfoStyle">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/title_textColor</item>
+        <item name="android:textSize">@dimen/player_text_view_info_text_size</item>
+
+    </style>
+
 </resources>
