--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,4 +85,32 @@
 
     </style>
 
+
+    <style name="PlayerTextViewTrackNameStyle">
+        <item name="android:textColor">@color/button_textColor</item>
+    </style>
+
+    <style name="PlayerGrayButtonStyle">
+        <item name="android:alpha">0.25</item>
+        <item name="backgroundTint">@color/button_textColor</item>
+
+    </style>
+
+    <style name="PlayerButtonPlayTrackStyle">
+        <item name="tint">@color/white</item>
+        <item name="backgroundTint">@color/button_textColor</item>
+    </style>
+    <style name="PlayerTextViewLabelsStyle">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/image_color</item>
+        <item name="android:textSize">@dimen/player_text_view_info_text_size</item>
+
+    </style>
+    <style name="PlayerTextViewInfoStyle">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/button_textColor</item>
+        <item name="android:textSize">@dimen/player_text_view_info_text_size</item>
+
+    </style>
+
 </resources>
