--- a/app/src/main/res/layout/activity_audioplayer.xml
+++ b/app/src/main/res/layout/activity_audioplayer.xml
@@ -53,6 +53,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/ys_display_medium"
         android:textSize="@dimen/primary_text_size"
+        android:layout_marginTop="@dimen/margin_settings_menu_end"
         app:layout_constraintEnd_toStartOf="@+id/right_guideline"
         app:layout_constraintStart_toStartOf="@+id/left_guideline"
         app:layout_constraintTop_toBottomOf="@+id/center_guideline"
