--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,6 @@
 
     <dimen name="SearchTrackItemArtworkWidthHeight">48dp</dimen>
     <dimen name="player_small_gray_button_size">48dp</dimen>
+
+    <dimen name="search_track_progressbar_size">44dp</dimen>
 </resources>
