--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+    android:shape="oval"
+    >
 
     <solid
         android:color="@android:color/darker_gray"
@@ -10,5 +11,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@android:color/darker_gray"/>
+        android:color="@android:color/darker_gray"
+        />
 </shape>
