--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -28,7 +28,7 @@
     <style name="SettingsTextViewItemStyle">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/settings_text_size</item>
-        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
 
     <style name="SettingsImageViewItemStyles">
@@ -37,6 +37,10 @@
 
     <style name="SettingsImageViewBackArrowStyles">
         <item name="tint">@color/white</item>
+    </style>
+
+    <style name="SettingsLightDarkThemeSwitchStyle">
+
     </style>
 
     <style name="SearchLayoutStyles">
@@ -103,25 +107,28 @@
     </style>
 
     <style name="PlayerGrayButtonStyle">
-        <item name="backgroundTint">@color/title_textColor</item>
-        <item name="android:alpha">0.25</item>
+        <item name="backgroundTint">@color/dark_gray</item>
+
     </style>
 
     <style name="PlayerButtonPlayTrackStyle">
         <item name="tint">@color/button_textColor</item>
         <item name="backgroundTint">@color/white</item>
+        <item name="android:padding">@dimen/top_title_margin</item>
     </style>
+
     <style name="PlayerTextViewLabelsStyle">
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textColor">@color/image_color</item>
         <item name="android:textSize">@dimen/player_text_view_info_text_size</item>
 
     </style>
+
     <style name="PlayerTextViewInfoStyle">
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textColor">@color/title_textColor</item>
         <item name="android:textSize">@dimen/player_text_view_info_text_size</item>
-
+        <item name="android:gravity">end</item>
     </style>
 
 </resources>
