--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="title_textColor">#FFFFFF</color>
     <color name="button_textColor">#1A1B22</color>
     <color name="image_color">#AEAFB4</color>
+    <color name="light_gray">#C0C0C0</color>
+    <color name="dark_gray">#505050</color>
+
     <color name="main_background_color">#3772E7</color>
     <color name="main_background_color_night">#1A1B22</color>
     <color name="search_layout_color">#E6E8EB</color>
