--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -131,4 +131,19 @@
         <item name="android:gravity">end</item>
     </style>
 
+    <style name="MediatekaTabStyle">
+        <item name="background">@color/button_textColor</item>
+        <item name="tabIndicatorColor">@color/white</item>
+        <item name="tabTextColor">@color/white</item>
+
+    </style>
+
+    <style name="MediatekaTextViewStyle">
+
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">@dimen/search_track_text_size</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
