--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -122,4 +122,18 @@
 
     </style>
 
+    <style name="MediatekaTabStyle">
+        <item name="background">@color/white</item>
+        <item name="tabIndicatorColor">@color/button_textColor</item>
+        <item name="tabTextColor">@color/button_textColor</item>
+
+    </style>
+
+    <style name="MediatekaTextViewStyle">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">@dimen/search_track_text_size</item>
+        <item name="android:textColor">@color/dark_black</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
