--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,61 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/MainLayoutColor"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/MainActivityColorStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-    >
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/container_view"
+        android:name="androidx.navigation.fragment.NavHostFragment"
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/navigation_graph" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        style="@style/BottomNavigationViewStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/base_margin"
-        android:layout_marginTop="@dimen/top_title_margin"
-        android:layout_marginBottom="@dimen/bottom_title_margin"
-        android:fontFamily="@font/ys_display_medium"
-        android:gravity="top"
-        android:text="@string/title"
-        android:textColor="@color/title_textColor"
-        android:textSize="@dimen/primary_text_size" />
 
-    <Button
-        android:id="@+id/button_search"
-        style="@style/MainButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/base_margin"
-        android:layout_marginEnd="@dimen/base_margin"
-        android:layout_marginBottom="@dimen/base_margin"
-        android:layout_weight="1"
-        android:text="@string/search"
-        app:icon="@drawable/baseline_search_24" />
+        app:itemActiveIndicatorStyle="@style/BottomNavigationViewStyle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_menu"
 
-    <Button
-        android:id="@+id/button_mediateka"
-        style="@style/MainButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/base_margin"
-        android:layout_marginEnd="@dimen/base_margin"
-        android:layout_marginBottom="@dimen/base_margin"
-        android:layout_weight="1"
-        android:text="@string/mediateka"
-        app:icon="@drawable/baseline_library_music_24" />
+        />
 
-    <Button
-        android:id="@+id/button_settings"
-        style="@style/MainButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/base_margin"
-        android:layout_marginEnd="@dimen/base_margin"
-        android:layout_marginBottom="@dimen/base_margin"
-        android:layout_weight="1"
-        android:text="@string/settings"
-        app:icon="@drawable/baseline_settings_24" />
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
