--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -134,7 +134,7 @@
     </style>
 
     <style name="MediatekaTabStyle">
-        <item name="background">@color/button_textColor</item>
+        <item name="android:background">@color/button_textColor</item>
         <item name="tabIndicatorColor">@color/white</item>
         <item name="tabTextColor">@color/white</item>
 
@@ -148,4 +148,14 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="BottomNavigationViewStyle">
+
+        <item name="itemIconTint">@drawable/bottom_nav_item_color_dark</item>
+        <item name="itemTextColor">@drawable/bottom_nav_item_color_dark</item>
+        <item name="android:background">@color/main_background_color_night</item>
+    </style>
+
+    <style name="MainActivityColorStyle">
+        <item name="android:background">@color/main_background_color_night</item>
+    </style>
 </resources>
